--- a/proftpd.conf
+++ b/proftpd.conf
@@ -186,4 +186,4 @@ Include /etc/proftpd/tls.conf
 # </Anonymous>
 
 # Include other custom configuration files
-Include /etc/proftpd/conf.d/
+Include /etc/proftpd/conf.d/*.conf
